--- a/aula16/ex17/modelo.html
+++ b/aula16/ex17/modelo.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Analisador de Números</h1>
     </header>
     <section>
         <div>
-            testando...
+            Número:(entre 1 e 100)
+            <input type="number" name="numero" id="numero">
+            <label for="numero"></label>
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
         </div>
-        <div>
+        <div id="res">
 
         </div>
     </section>
